--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Página principal</title>
+  <title>inicio</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -16,9 +16,9 @@
   <nav>
     <ul>
       <li><a href="#" class="activo">inicio</a></li>
-      <li><a href="">Canciones</a></li>
-      <li><a href="">Compositores</a></li>
-      <li><a href="">Acerca de</a></li>
+      <li><a href="./pages/canciones.html">Canciones</a></li>
+      <li><a href="./pages/compositores.html">Compositores</a></li>
+      <li><a href="./pages/acerca de.html">Acerca de</a></li>
     </ul>
   </nav>
   <section id="main-content">
