--- a/pages/acerca de.html
+++ b/pages/acerca de.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Página principal</title>
+  <title>Acerca de:</title>
   <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
@@ -15,9 +15,9 @@
   </section>
   <nav>
     <ul>
-      <li><a href="">inicio</a></li>
-      <li><a href="">Canciones</a></li>
-      <li><a href="">Compositores</a></li>
+      <li><a href="../index.html">inicio</a></li>
+      <li><a href="./canciones.html">Canciones</a></li>
+      <li><a href="./compositores.html">Compositores</a></li>
       <li><a href="#" class="activo">Acerca de</a></li>
     </ul>
   </nav>
