--- a/pages/canciones.html
+++ b/pages/canciones.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Página principal</title>
+  <title>Canciones</title>
   <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
@@ -15,10 +15,10 @@
   </section>
   <nav>
     <ul>
-      <li><a href="">inicio</a></li>
+      <li><a href="../index.html">inicio</a></li>
       <li><a href="#" class="activo">Canciones</a></li>
-      <li><a href="">Compositores</a></li>
-      <li><a href="">Acerca de</a></li>
+      <li><a href="./compositores.html">Compositores</a></li>
+      <li><a href="./acerca de.html">Acerca de</a></li>
     </ul>
   </nav>
   <section id="main-content">
